--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 body {
-    background-image: url("https://img.freepik.com/free-vector/gradient-geometric-shape-background_78532-374.jpg?size=626&ext=jpg");
+    background-image: url("https://cutewallpaper.org/21/blue-purple-wallpaper/3d-Abstract-Wallpapers-Background,-Awesome-Wallpapers-Tech-.jpg");
     background-color: #cccccc;
    }
 
 head {
     color: white;
+    font-size: x-large;
   }
 
 p {
     color: white;
+    font-size: x-large;
   }
   .banner {
     color:white !important;
