--- a/style.css
+++ b/style.css
@@ -56,4 +56,12 @@ font-size: 20px;
   color: white;
   font-size: x-large;
   margin: 10px;
+  background-color: rgb(101,23,204) !important;
+  justify-content: center;
 }
+
+.project-card {
+  height: 80%;
+  width: 50%;
+}
+
