--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url("https://cutewallpaper.org/21/blue-purple-wallpaper/3d-Abstract-Wallpapers-Background,-Awesome-Wallpapers-Tech-.jpg");
     background-color: #cccccc;
     font-family: sans-serif;
+
    }
 
 head {
@@ -11,7 +12,7 @@ head {
 
 p {
     color: white;
-    font-size: x-large;
+    font-size: large;
   }
   .banner {
     color:white !important;
