--- a/style.css
+++ b/style.css
@@ -79,3 +79,25 @@ font-size: 20px;
   width: 50%;
 }
 
+.fa {
+  padding: 20px;
+  font-size: 80px;
+  width: 80px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-github {
+  background:black;
+  color:white;
+}
