changed background image in style.css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://cutewallpaper.org/21/blue-purple-wallpaper/3d-Abstract-Wallpapers-Background,-Awesome-Wallpapers-Tech-.jpg");
+    background-image: url("https://images.hdqwalls.com/download/colorful-galaxy-planets-4k-ih-2560x1700.jpg");
     background-color: #cccccc;
     font-family: sans-serif;
     font-size: x-large;
