tried different font families

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("https://as2.ftcdn.net/v2/jpg/03/67/77/59/1000_F_367775957_UMmb63PtKFsFUG0E6ikyKSIsVVA5GW2b.jpg");
     background-color: #cccccc;
-    font-family: sans-serif;
+    font-family:unset;
     font-size: x-large;
 
    }
