--- a/style.css
+++ b/style.css
@@ -21,11 +21,16 @@ p {
   }
 
 nav {
-    background-color:#008c9e !important;
+ background-color:#008c9e !important;
+ color: white;
 }
 
-.nav-item {
+.nav-link {
+  margin: 10px;
+  justify-content: center;
   font-size: xx-large;
+  color:white !important;
+  background-color: rgb(122, 20, 182);
 }
 
 footer {
@@ -61,7 +66,9 @@ font-size: 20px;
 
 .resume a {
   color:white;
-  font-size: x-large;
+  font-size: xx-large;
+  color:white !important;
+  background-color: rgb(122, 20, 182);
 
 }
 
