--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ head {
 
 p {
     color: white;
-    font-size: xx-large;
+    font-size: x-large;
   }
 
 .banner {
     color:white !important;
-    font-size:xx-large !important;
+    font-size:x-large !important;
   }
 
 nav {
@@ -28,7 +28,7 @@ nav {
 .nav-link {
   margin: 10px;
   justify-content: center;
-  font-size: xx-large;
+  font-size: x-large;
   color:white !important;
   background-color: rgb(122, 20, 182);
 }
@@ -66,7 +66,7 @@ font-size: 20px;
 
 .resume a {
   color:white;
-  font-size: xx-large;
+  font-size: x-large;
   color:white !important;
   background-color: rgb(122, 20, 182);
 
@@ -81,7 +81,7 @@ font-size: 20px;
   color: white;
   font-size: x-large;
   margin: 10px;
-  background-color: #008c9e !important;
+  background-color:rgb(122, 20, 182) !important;
   justify-content: center;
 }
 
