--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
 
 .banner {
     color:white !important;
-    font-size:x-large !important;
+    font-size:xx-large !important;
   }
 
 nav {
@@ -81,7 +81,7 @@ font-size: 20px;
   color: white;
   font-size: x-large;
   margin: 10px;
-  background-color:rgb(122, 20, 182) !important;
+  background-color: rgb(122, 20, 182) !important;
   justify-content: center;
 }
 
